@@ -328,7 +328,10 @@ public class ObjectSelect<T> extends FluentSelect<T, ObjectSelect<T>> implements
      * @return count of rows
      */
     public long selectCount(ObjectContext context) {
-        return count().selectOne(context);
+        ColumnSelect<Long> count = count();
+        // reset orderings, see CAY-2836
+        count.orderings = List.of();
+        return count.selectOne(context);
     }
 
     @Override
