@@ -22,6 +22,7 @@ CAY-2897 Add no-op default implementations to the GraphChangeHandler interface
 Bug Fixes:
 
 CAY-2701 MySQL DST-related LocalDateTime issues
+CAY-2836 ObjectSelect.selectCount() throws if a query contains ordering
 CAY-2871 QualifierTranslator breaks on a relationship with a compound FK
 CAY-2872 CayenneModeler "Documentation" link is broken
 CAY-2876 Memory leak in the ObjectStore
